# advent-of-code

./: .gitignore
2024/: pyproject.toml
2024/day-1/: solution.py
2024/day-2/: solution.py
